# ANEXA-LICENTA-FIIR-IAII-2026-STAICU-ANDREI-ALEXANDRU

L0-Firmware/: README.md
L0-Firmware/esp32/: DummyBot_ESP32_Bridge.ino  README.md  commands.h  config.h  diff_controller.h  diff_controller.ino  encoder_driver.h  encoder_driver.ino  motor_driver_l298n.h  motor_driver_l298n.ino  rezumat.txt
L1-Navigatie/: README.md
L1-Navigatie/experiments/: README.md
L1-Navigatie/experiments/Xplorer-A/session_2026-03-09_11-06-02/: semantic_objects_BACKUP_2026-03-09_11-06-04.geojson  semantic_snapshot_start.geojson  session_config.json  summary.json  test1_compute_route.json  test2_run01_forward.json  test2_run01_return.json  test3_run01_forward.json  test3_run01_return.json
L1-Navigatie/experiments/Xplorer-A/session_2026-03-09_16-11-10/: semantic_objects_BACKUP_2026-03-09_16-11-13.geojson  semantic_snapshot_start.geojson  session_config.json  summary.json  test1_compute_route.json  test2_run01_forward.json  test2_run01_return.json  test3_run01_forward.json  test3_run01_return.json
L1-Navigatie/experiments/Xplorer-A/session_2026-03-09_18-20-16/: semantic_objects_BACKUP_2026-03-09_18-20-20.geojson  semantic_snapshot_start.geojson  session_config.json  summary.json  test1_compute_route.json  test2_run01_forward.json  test2_run01_return.json  test3_run01_forward.json  test3_run01_return.json
L1-Navigatie/experiments/Xplorer-A/session_2026-03-09_18-24-50/: summary.json  test3_run01_forward.json  test3_run01_return.json  test3_run02_forward.json  test3_run02_return.json  test3_run03_forward.json  test3_run03_return.json
L1-Navigatie/experiments/Xplorer-A/session_2026-03-09_18-31-09/: summary.json  test3_run01_forward.json  test3_run01_return.json  test3_run02_forward.json  test3_run02_return.json  test3_run03_forward.json  test3_run03_return.json
L1-Navigatie/experiments/Xplorer-A/session_2026-03-10_14-31-04/: semantic_objects_BACKUP_2026-03-10_14-31-07.geojson  session_config.json  (+7 more)
L1-Navigatie/maps/: route_graph_fiir.geojson  route_graph_fiir_nav2.geojson  route_graph_fiir_semantic.geojson  semantic_objects.geojson
L2-Perceptie/: CITATION.cff  README.md
L2-Perceptie/semantic_localizer/: package.xml  setup.cfg  setup.py
L2-Perceptie/semantic_localizer/config/: route_server_params.yaml  semantic_localizer_params.yaml  semantic_localizer_params_route.yaml
L2-Perceptie/semantic_localizer/launch/: semantic_localizer_launch.py
L2-Perceptie/semantic_localizer/scripts/: route_config.yaml  test_semantic_navigation_v5_10.py
L2-Perceptie/semantic_localizer/semantic_localizer/: __init__.py  semantic_localizer_node.py  semantic_map_manager.py
L2-Perceptie/yolo26_cpp/: CMakeLists.txt  package.xml
L2-Perceptie/yolo26_cpp/include/yolo26_cpp/: yolo26_detector.hpp
L2-Perceptie/yolo26_cpp/launch/: yolo26_cpp_launch.py
L2-Perceptie/yolo26_cpp/src/: yolo26_component.cpp  yolo26_detector.cpp  yolo26_detector_ncnn.cpp  yolo26_node.cpp
L3-Reasoning-VLM/: CITATION.cff  README.md
L3-Reasoning-VLM/analysis/figures/: Fig10.py  Fig11.py  Fig8.py  Fig9.py  data_loader.py
L3-Reasoning-VLM/config/: policy.yaml  semantic_objects_static.geojson
L4-Interfata-Loguri/: README.md  SOUL.md
L4-Interfata-Loguri/session_a/audits/: audit_20260422_125210.jsonl  audit_20260422_130731.jsonl  audit_20260422_133920.jsonl  audit_20260423_111036.jsonl  audit_20260423_111403.jsonl  audit_20260423_112335.jsonl  audit_20260423_122139.jsonl  audit_20260423_125344.jsonl  audit_20260423_125753.jsonl  audit_20260423_130130.jsonl
L4-Interfata-Loguri/session_a/csv_clean/: monitor_20260422_125213.csv  monitor_20260422_130734.csv  monitor_20260422_133928.csv  monitor_20260423_111042.csv  monitor_20260423_112340.csv  monitor_20260423_122142.csv  monitor_20260423_125755.csv  monitor_20260423_130133.csv
L4-Interfata-Loguri/session_a/csv_debug/: monitor_20260422_131543.csv  monitor_20260422_174211.csv  monitor_20260422_180519.csv  monitor_20260423_111406.csv  monitor_20260423_114406.csv  monitor_20260423_115728.csv  monitor_20260423_115956.csv  monitor_20260423_125347.csv
L4-Interfata-Loguri/session_b/audits/: audit_20260423_143541.jsonl  audit_20260423_150456.jsonl  audit_20260423_153932.jsonl
L4-Interfata-Loguri/session_b/csv/: monitor_20260423_143757.csv  monitor_20260423_150459.csv  monitor_20260423_153936.csv
L4-Interfata-Loguri/session_c/audits/: pair1_B_fire.jsonl  pair1_C_restroom.jsonl  pair2_B_cb203.jsonl  pair2_C_cb204.jsonl
L5-Memorie-Semantica/: README.md
L5-Memorie-Semantica/memory/: M1_environment.jsonl  M2_temporal_patterns.jsonl  M3_operator_preferences.jsonl  M4_platform_capabilities.jsonl  M4_xplorer-b.jsonl  M4_xplorer-c.jsonl  M5_task_history.jsonl  memory_digest.json
Simulare CAM - Capitolul 4/: simulator_hex_coupling.html  simulator_hex_coupling_3d.html
(+313 files in other folders)
