<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_localizer</name>
  <version>0.1.0</version>
  <description>ROS 2 package for persistent semantic object mapping, semantic graph annotation, and integration with Nav2 Route Server for semantic-aware indoor navigation experiments.</description>

  <maintainer email="bogdan.abaza@upb.ro">Bogdan Felician Abaza</maintainer>
  <author email="bogdan.abaza@upb.ro">Bogdan Felician Abaza</author>
  <author>Andrei-Alexandru Staicu</author>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
