<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo26_cpp</name>
  <version>1.0.0</version>
  <description>ROS 2 C++ package for YOLO-based monocular object detection integrated into a semantic-aware indoor mobile robot navigation pipeline.</description>

  <maintainer email="bogdan.abaza@upb.ro">Bogdan Felician Abaza</maintainer>
  <author email="bogdan.abaza@upb.ro">Bogdan Felician Abaza</author>
  <author>Andrei-Alexandru Staicu</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>lifecycle_msgs</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
